<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flu News</string>
    <string name="flu_vaccination_estimates_xls">Influenza Vaccination Estimatest (xls)</string>
    <string name="weekly_flu_activity_xml">Weekly Flu Activity Report</string>
    <string name="flu_pages_rss_xml">Influenza Pages (xml)</string>
    <string name="flu_pages_rss_json">Influenza Pages (json)</string>
    <string name="flu_updates_rss_xml">Influenza Updates RSS (xml)</string>
    <string name="flu_podcasts_rss">Influenza Podcasts</string>
    <string name="cdc_pages_rss_xml">CDC Features Pages (xml)</string>
    <string name="cdc_pages_rss_json">CDC Features Pages (json)</string>
    <string name="tabbed_interface">Tabbed Interface</string>
    <string name="context_menu_view_label">View Article</string>
    <string name="context_menu_download_label">Download Podcast</string>
    <string name="context_menu_play_podcast_label">Play Podcast</string>
    <string name="context_menu_share_link_label">Share Link</string>
    <string name="context_menu_related_topics_label">Related Topics</string>
    <string name="related_topics_name">Related Topics</string>
    <string name="menu_item_refresh_label">Refresh</string>
    <string name="content_is_pdf_warning">This document is a PDF. You may need to launch this document from the notification area</string>
    <string name="menu_item_enable_zoom">Enable map zooming</string>
    <string name="menu_item_disable_zoom">Disable map zooming</string>
    <string name="disclaimer">THE MATERIAL EMBODIED IN THIS SOFTWARE IS PROVIDED TO YOU "AS-IS" AND WITHOUT WARRANTY OF ANY KIND, EXPRESS, IMPLIED OR OTHERWISE, INCLUDING WITHOUT LIMITATION, ANY WARRANTY OF FITNESS FOR A PARTICULAR PURPOSE. IN NO EVENT SHALL THE CENTERS FOR DISEASE CONTROL AND PREVENTION (CDC) OR THE UNITED STATES (U.S.) GOVERNMENT BE LIABLE TO YOU OR ANYONE ELSE FOR ANY DIRECT, SPECIAL, INCIDENTAL, INDIRECT OR CONSEQUENTIAL DAMAGES OF ANY KIND, OR ANY DAMAGES WHATSOEVER, INCLUDING WITHOUT LIMITATION, LOSS OF PROFIT, LOSS OF USE, SAVINGS OR REVENUE, OR THE CLAIMS OF THIRD PARTIES, WHETHER OR NOT CDC OR THE U.S. GOVERNMENT HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH LOSS, HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, ARISING OUT OF OR IN CONNECTION WITH THE POSSESSION, USE OR PERFORMANCE OF THIS SOFTWARE.</string>
</resources>
