<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:orientation="vertical">
    <Button android:id="@+id/flu_vaccination_estimates" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/flu_vaccination_estimates_xls"></Button>
    <Button android:id="@+id/weekly_flu_activity" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/weekly_flu_activity_xml"></Button>
    <Button android:id="@+id/flu_updates_rss" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/flu_updates_rss_xml"></Button>
    <Button android:id="@+id/flu_podcasts" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/flu_podcasts_rss"></Button>
    <Button android:id="@+id/flu_pages_rss_xml" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/flu_pages_rss_xml"></Button>
    <Button android:id="@+id/cdc_features_pages_xml" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/cdc_pages_rss_xml"></Button>
    <Button android:text="@string/tabbed_interface" android:layout_height="wrap_content" android:id="@+id/tabbed_interface" android:layout_width="match_parent" android:layout_gravity="bottom"></Button>
</LinearLayout>
